--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.0-alpha.22",
     "axios": "^0.19.1",
@@ -17,7 +18,6 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-datepicker": "^1.7.2",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-material-menu": "^1.0.0",
